# snooty

./: .babelrc  .desktop-lighthouserc.js  .drone.yml  .eslintrc.js  .gitignore  .gitmodules  .lintstagedrc.js  .mobile-lighthouserc.js  .npmrc  .percy.yml  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  HACKING.md  Makefile  Pipfile  README.md  build-hook.txt  build-retry.sh  build.sh  gatsby-browser.js  gatsby-config.js  gatsby-config.mjs  gatsby-node-old.js  gatsby-node.js  gatsby-ssr.js  index.html  jest-preprocess.js  jest-puppeteer.config.js  jest.config.js  lighthouserc.js  netlify.toml  other-things-to-source.js  package-lock.json  package.json  pnpm-lock.yaml  preview-start.js  snooty.idl  test.env  (+3 more)
.github/: pull_request_template.md
.lighthouseci/: flags-08b8788e-b37c-440c-9e50-c46dd39fbd57.json  lhr-1707343308926.html  lhr-1707343308926.json  lhr-1707343322003.html  lhr-1707343322003.json  lhr-1707343333580.html  lhr-1707343333580.json  links.json
.metals/: metals.lock.db
__mocks__/: gatsby.js  redoc.js
component-factory-transformer/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
frameworks/gatsby/component-factory-transformer/: Cargo.toml
front-end/: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  Makefile  README.md  gatsby-config.js  gatsby-node.js  package-lock.json  package.json  server.js  staging.js  webpack.config.js
netlify/: README.md  netlify.toml  utils.js
parser/: Makefile  Pipfile
preview/: get-include-file.js  noop.js  preview-setup-cli.js  preview-setup-vscode.js  preview-setup.js
(+2113 files in other folders)
