[package]
name = "component-factory-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false

[dependencies]
serde = "1"
serde_json = "1.0.114"
swc_atoms = "0.6.5"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.143.6"
swc_ecma_transforms_base = "0.137.12"
swc_ecma_transforms_testing = "0.140.11"
testing = "0.35.19"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
